# devcontainer-csound

./: .editorconfig  .editorconfig-checker.json  .gitignore  .markdownlint.json  .pre-commit-config.yaml  README.md  csound_assist_config.yaml  csound_notes.md  pyproject.toml  requirements.txt  training_notes.md
.devcontainer/: Dockerfile  devcontainer.json  starship.toml  zshrc
corpus/: additive_synthesis_entry.md  bamboo_physmod_entry.md  basic_oscillator_entry.md  butterworth_filters_entry.md  chorus_flanger_phaser_effects_entry.md  comb_filters_entry.md  csound_additive_synthesis_entry.md  csound_bamboo_physmod_entry.md  csound_basic_oscillator_entry.md  csound_comb_filters_entry.md  csound_envelope_design_patterns_entry.md  csound_fm_global_reverb_entry.md  csound_fm_synthesis_entry.md  csound_fof_formant_synthesis_entry.md  csound_fof_tutorial_clarke_entry.md  csound_granular_synthesis_entry.md  csound_lfo_waveforms_entry.md  csound_lorenz_chaos_entry.md  csound_midi_integration_entry.md  csound_ring_modulation_entry.md  csound_sample_playback_entry.md  csound_scanned_synthesis_entry.md  csound_score_programming_entry.md  csound_tb303_emulator_entry.md  csound_user_defined_opcodes_entry.md  csound_waveguide_clarinet_entry.md  delay_line_effects_entry.md  distortion_waveshaping_entry.md  dynamics_processing_entry.md  example.md  fft_entry.md  filter_bank_vocoder_entry.md  fm_global_reverb_entry.md  fm_pm_rm_am_entry.md  frequency_shifting_entry.md  karplus_strong_synthesis_entry.md  lfo_waveforms_entry.md  mccurdy_additive_synthesis_entry.md  mccurdy_delays_entry.md  mccurdy_fft_entry.md  (+15 more)
csound_assist/: __init__.py  __main__.py  analytics.py  assistant.py  cache.py  chat.py  chunker.py  cli.py  code_analyzer.py  config.py  display.py  embeddings.py  indexer.py  llm_client.py  mcp_server.py  opcode_data.py  prompts.py  retriever.py  validator.py
csound_corpus/: 00_acronyms.md  csound_llm_guide.md  csound_signal_processing_opcodes.md  csound_signal_processing_opcodes.md.backup  csound_synthesis_opcodes.md  scanned_synthesis.md  template.json  training_corpus.jsonl  (+2 more)
(+4809 files in other folders)
